--- a/WebDev-DevOps/week1-htmlcss-assign/assign2/style.css
+++ b/WebDev-DevOps/week1-htmlcss-assign/assign2/style.css
@@ -52,6 +52,30 @@ h1 {
   padding-top: 0.9em;
 }
 
+.companies {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* border-style:; */
+  padding-right: 10vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+}
+.rating {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  padding-bottom: 12vh;
+}
+
+span {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #6e6f6f;
+}
+
 .container {
 }
 /* RIGHT */
